TTTS-149#comment-51561711 utilのAPI変更対応　／　在庫状況画面調整　／　vue-cliテンプレート更新

--- a/.babelrc
+++ b/.babelrc
@@ -5,13 +5,8 @@
   ],
   "plugins": [
     "transform-runtime",
+    "transform-vue-jsx",
     "transform-async-to-generator"
   ],
-  "comments": false,
-  "env": {
-    "test": {
-      "presets": ["env", "vue-app"],
-      "plugins": [ "istanbul" ]
-    }
-  }
+  "comments": false
 }
