--- a/package.json
+++ b/package.json
@@ -12,25 +12,27 @@
   },
   "dependencies": {
     "axios": "0.17.1",
-    "es6-promise": "4.1.1",
-    "moment": "2.19.2",
+    "es6-promise": "4.2.2",
+    "moment": "2.20.1",
     "twix": "1.2.1",
-    "vue": "^2.5.8",
-    "vue-awesome-swiper": "2.6.7",
+    "vue": "2.5.13",
+    "vue-awesome-swiper": "3.0.6",
     "vue-router": "^3.0.1",
     "vuex": "3.0.1",
     "vuex-persistedstate": "2.4.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
-    "babel-core": "^6.22.1",
+    "babel-core": "6.26.0",
     "babel-eslint": "^7.1.1",
+    "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "babel-loader": "^7.1.1",
+    "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-runtime": "^6.22.0",
+    "babel-plugin-transform-vue-jsx": "^3.5.0",
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
-    "babel-preset-vue-app": "1.3.2",
-    "babel-register": "^6.22.0",
+    "babel-preset-vue-app": "2.0.0",
     "chalk": "^2.0.1",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.0",
@@ -41,7 +43,7 @@
     "eslint-loader": "^1.7.1",
     "eslint-plugin-html": "^3.0.0",
     "eslint-plugin-import": "^2.7.0",
-    "eventsource-polyfill": "^0.9.6",
+    "eslint-plugin-vue": "4.0.0-beta.4",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
@@ -57,6 +59,7 @@
     "sass-loader": "6.0.6",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
+    "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
