--- a/.babelrc
+++ b/.babelrc
@@ -1,12 +1,12 @@
 {
   "presets": [
-    ["env", { "modules": false }],
-    "vue-app"
+    ["env", {
+      "modules": false,
+      "targets": {
+        "browsers": ["> 1%", "last 2 versions", "not ie <= 8"]
+      }
+    }],
+    "stage-2"
   ],
-  "plugins": [
-    "transform-runtime",
-    "transform-vue-jsx",
-    "transform-async-to-generator"
-  ],
-  "comments": false
+  "plugins": ["transform-vue-jsx", "transform-runtime"]
 }
