--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frontend_tttsutil",
-  "version": "1.0.2",
+  "version": "1.1.0",
   "description": "operation utils frontend for TTTS",
   "author": "Shun <shun@motionpicture.jp>",
   "private": true,
@@ -8,12 +8,14 @@
     "start": "node dist/server/index",
     "ssl": "node dist/server/ssl",
     "lint": "eslint --ext .js,.vue src",
-    "build": "npm run build-server && npm run build-client",
+    "build": "npm run lint && npm run build-server && npm run build-client",
     "build-client-local": "npm run clean && node build/development.js",
     "build-client": "npm run clean && node build/build.js",
     "build-server": "tsc --project src/server --outDir dist/server --locale ja-jp",
     "precommit": "npm run build && git add --all",
-    "clean": "rimraf dist/client"
+    "clean": "rimraf dist/client",
+    "preversion": "npm run build",
+    "version": "git add -A"
   },
   "dependencies": {
     "@cinerino/sdk": "^1.20.4",
