--- a/src/client/tsconfig.json
+++ b/src/client/tsconfig.json
@@ -2,11 +2,12 @@
     "compilerOptions": {
         "allowUnreachableCode": false,
         "allowUnusedLabels": false,
+        "allowSyntheticDefaultImports": true,
         "charset": "utf8",
         "diagnostics": false,
         "disableSizeLimit": false,
         "emitDecoratorMetadata": true,
-        "experimentalDecorators":true,
+        "experimentalDecorators": true,
         "forceConsistentCasingInFileNames": true,
         "inlineSourceMap": false,
         "inlineSources": false,
@@ -14,7 +15,8 @@
         "listEmittedFiles": false,
         "listFiles": false,
         "locale": "en-us",
-        "module": "commonjs",
+        "module": "es2015",
+        "moduleResolution": "node",
         "newLine": "CRLF",
         "noImplicitAny": true,
         "noImplicitReturns": true,
